tests/invalid/Parsing_Invalid_28.whiley
type Rec is  {
     void[] xs
}
